Add dummy parameter to root template

--- a/root.yml
+++ b/root.yml
@@ -1,6 +1,10 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
   TODO
+Parameters:
+  EnvName:
+    Description: Lorem
+    Type: String
 Resources:
   GarbageBucket:
     Type: "AWS::S3::Bucket"
