Improve docs on root template

--- a/root.yml
+++ b/root.yml
@@ -1,6 +1,15 @@
+# Generally this template is used to launch stacks from the bootstrapping
+# CodePipeline. Primarily is is simply a wrapper around individial app- and
+# service-specific templates, which get nested into this template and are
+# launched when this one is. The CodePiple also passes in a template
+# configuration file, which includes parameter values for this and all nested
+# templates. This root template MUST define all parameters that are included in
+# the config file. It can then pass along select values to nested stacks that
+# require them.
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
-  TODO
+  Launches stacks for a number of applications and services that are maintained
+  in separate templates.
 Parameters:
   EnvName:
     Description: Lorem
