Fix permissions on template buckets

--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -183,6 +183,15 @@ Resources:
                   - "s3:GetObject"
                   - "s3:GetObjectVersion"
                 Resource: !Sub arn:aws:s3:::${ArtifactStore}/*
+              - Effect: Allow
+                Action:
+                  - "s3:ListBucket"
+                  - "s3:PutObject"
+                Resource:
+                  - !Sub arn:aws:s3:::${StagingTemplateBucket}
+                  - !Sub arn:aws:s3:::${StagingTemplateBucket}/*
+                  - !Sub arn:aws:s3:::${ProductionTemplateBucket}
+                  - !Sub arn:aws:s3:::${ProductionTemplateBucket}/*
   CloudFormationIAMRole:
     # This is the role used to launch the root stack, and thus all nested app
     # and service stacks. It needs permissions to create any of the resources
