--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -328,3 +328,18 @@ Resources:
       Source:
         Type: CODEPIPELINE
       TimeoutInMinutes: 5
+Outputs:
+  StagingTemplateBucketURL:
+    Description: >
+      The S3 URL for the bucket that templates have been synced to, to be used
+      in a staging environment
+    Value: !Ref StagingTemplateBucket
+    Export:
+      Name: !Sub ${AWS::StackName}-Staging-TemplateBucket
+  ProductionTemplateBucketURL:
+    Description: >
+      The S3 URL for the bucket that templates have been synced to, to be used
+      in a production environment
+    Value: !Ref ProductionTemplateBucket
+    Export:
+      Name: !Sub ${AWS::StackName}-Production-TemplateBucket
