--- a/root.yml
+++ b/root.yml
@@ -11,10 +11,18 @@ Description: >
   Launches stacks for a number of applications and services that are maintained
   in separate templates.
 Parameters:
-  EnvName:
-    Description: Lorem
+  BootstrapStackName:
+    Description: The name of the bootstrapping stack in this AWS region
     Type: String
+  RootEnvironmentType:
+    Description: A string indentifying the type of enviroment being launched
+    Type: String
+    AllowedValues:
+      - Staging
+      - Production
 Resources:
-  GarbageBucket:
-    Type: "AWS::S3::Bucket"
-    DeletionPolicy: Delete
+  VPCStack:
+    Type: "AWS::CloudFormation::Stack"
+    Properties:
+      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/vpc.yml"]]
+      TimeoutInMinutes: "5"
