--- a/root.yml
+++ b/root.yml
@@ -11,6 +11,11 @@ Description: >
   Launches stacks for a number of applications and services that are maintained
   in separate templates.
 Parameters:
+  ASGKeyPairName:
+    Description: >
+      The EC2 key pair used for instances in the Auto Scaling
+      group (region-specific)
+    Type: String
   BootstrapStackName:
     Description: The name of the bootstrapping stack in this AWS region
     Type: String
