Output and export subnets from VPS stack

--- a/vpc.yml
+++ b/vpc.yml
@@ -177,3 +177,28 @@ Resources:
     Properties:
       DhcpOptionsId: !Ref DHCPOptions
       VpcId: !Ref VPC
+Outputs:
+  Subnet 1:
+    Description: >
+      Resource ID (eg subnet-e19f0178) for subnet 1
+    Value: !Ref Subnet1
+    Export:
+      Name: !Sub ${AWS::StackName}-Subnet1
+  Subnet 2:
+    Description: >
+      Resource ID (eg subnet-e19f0178) for subnet 2
+    Value: !Ref Subnet2
+    Export:
+      Name: !Sub ${AWS::StackName}-Subnet2
+    Subnet 1 Availability Zone:
+      Description: >
+        The availability zone (eg us-east-1a) for subnet 1
+      Value: !GetAtt Subnet1.AvailabilityZone
+      Export:
+        Name: !Sub ${AWS::StackName}-Subnet1-AZ
+    Subnet 2 Availability Zone:
+      Description: >
+        The availability zone (eg us-east-1a) for subnet 2
+      Value: !GetAtt Subnet2.AvailabilityZone
+      Export:
+        Name: !Sub ${AWS::StackName}-Subnet2-AZ
