--- a/root.yml
+++ b/root.yml
@@ -31,3 +31,16 @@ Resources:
     Properties:
       TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/vpc.yml"]]
       TimeoutInMinutes: "5"
+  ECSClusterStack:
+    Type: "AWS::CloudFormation::Stack"
+    DependsOn: VPCStack
+    Properties:
+      Parameters:
+        KeyPairName: !Ref ASGKeyPairName
+        EnvironmentType: !Ref RootEnvironmentType
+        VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
+        VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
+        VPCSubnet1AZ: !GetAtt VPCStack.Outputs.Subnet1
+        VPCSubnet2AZ: !GetAtt VPCStack.Outputs.Subnet2
+      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/ecs.yml"]]
+      TimeoutInMinutes: "5"
