Add DeleteChangeSet policy to CodePipeline role

--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -139,6 +139,7 @@ Resources:
                   - "cloudformation:DescribeChangeSet"
                   - "cloudformation:CreateChangeSet"
                   - "cloudformation:ExecuteChangeSet"
+                  - "cloudformation:DeleteChangeSet"
                 Resource:
                   - !Sub arn:aws:cloudformation:${AWS::Region}:${AWS::AccountId}:stack/${RootStackName}-Staging/*
                   - !Sub arn:aws:cloudformation:${AWS::Region}:${AWS::AccountId}:stack/${RootStackName}-Production/*
