Fix VPC stack outputs

--- a/root.yml
+++ b/root.yml
@@ -40,7 +40,7 @@ Resources:
         EnvironmentType: !Ref RootEnvironmentType
         VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
         VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
-        VPCSubnet1AZ: !GetAtt VPCStack.Outputs.Subnet1
-        VPCSubnet2AZ: !GetAtt VPCStack.Outputs.Subnet2
+        VPCSubnet1AZ: !GetAtt VPCStack.Outputs.Subnet1AvailabilityZone
+        VPCSubnet2AZ: !GetAtt VPCStack.Outputs.Subnet2AvailabilityZone
       TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/ecs.yml"]]
       TimeoutInMinutes: "5"
