Add VPC Id as stack output

--- a/vpc.yml
+++ b/vpc.yml
@@ -178,6 +178,10 @@ Resources:
       DhcpOptionsId: !Ref DHCPOptions
       VpcId: !Ref VPC
 Outputs:
+  VPC:
+    Description:
+      Resource ID for the VPC
+    Value: !Ref VPC
   Subnet1:
     Description: >
       Resource ID (eg subnet-e19f0178) for subnet 1
