Fix syntax error in ECS template

--- a/ecs.yml
+++ b/ecs.yml
@@ -12,8 +12,9 @@ Parameters:
      group (region-specific)
     Type: String
   EnvironmentType:
-    Description: The kind of environment this cluster is being used for (eg
-    Production, Staging, etc)
+    Description: >
+      The kind of environment this cluster is being used for (eg
+      Production, Staging, etc)
     Type: String
   VPCSubnet1:
     Type: String
