Pass VPC ref into ECS template

--- a/ecs.yml
+++ b/ecs.yml
@@ -16,6 +16,8 @@ Parameters:
       The kind of environment this cluster is being used for (eg
       Production, Staging, etc)
     Type: String
+  VPC:
+    Type: String
   VPCSubnet1:
     Type: String
   VPCSubnet2:
