--- a/root.yml
+++ b/root.yml
@@ -38,6 +38,7 @@ Resources:
       Parameters:
         KeyPairName: !Ref ASGKeyPairName
         EnvironmentType: !Ref RootEnvironmentType
+        VPC: !GetAtt VPCStack.Outputs.VPC
         VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
         VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
         VPCSubnet1AZ: !GetAtt VPCStack.Outputs.Subnet1AvailabilityZone
