Fix Subnet ref in ECS template ASG

--- a/ecs.yml
+++ b/ecs.yml
@@ -1,6 +1,9 @@
 # NOTE EC2 Key Pairs cannot be created by CloudFormation templates, and are
 # region specific, so you need to create them before launching a stack, and
 # pass the name in as a parameter
+# TODO ASG sizing should get handled as more explicit parameters, so that when
+# an update occurs, the real (current) size of the group can be rolled over,
+# rather than it resetting to a baked-in value
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
   Creates an ESC cluster and an associated Auto Scaling group into which
@@ -295,4 +298,4 @@ Resources:
         # - String
       VPCZoneIdentifier:
         - !Ref VPCSubnet1
-        - !Ref VPCSubnet1
+        - !Ref VPCSubnet2
