Add policy actions to CloudFormation role in bootstrap template

--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -226,6 +226,14 @@ Resources:
                 Action:
                   - s3:CreateBucket
                 Resource: "*"
+              - Effect: Allow
+                # TODO Dangerous!
+                Action:
+                  - "ec2:*"
+                  - "ecs:*"
+                  - "iam:*"
+                  - "autoscaling:*"
+                Resource: "*"
   Pipeline:
     Type: "AWS::CodePipeline::Pipeline"
     Properties:
