Add CAPABILITY_IAM to bootstrap deploy actions

--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -296,8 +296,9 @@ Resources:
                 - Name: GitHubSourceArtifact
               Configuration:
                 ActionMode: CHANGE_SET_REPLACE
-                RoleArn: !GetAtt CloudFormationIAMRole.Arn
+                Capabilities: CAPABILITY_IAM
                 ChangeSetName: !Sub ${RootStackName}ChangeSetStaging
+                RoleArn: !GetAtt CloudFormationIAMRole.Arn
                 StackName: !Sub ${RootStackName}-Staging
                 TemplateConfiguration: TemplateConfigZipArtifact::staging.json
                 TemplatePath: GitHubSourceArtifact::root.yml
@@ -317,6 +318,7 @@ Resources:
                 Version: 1
               Configuration:
                 ActionMode: CHANGE_SET_EXECUTE
+                Capabilities: CAPABILITY_IAM
                 ChangeSetName: !Sub ${RootStackName}ChangeSetStaging
                 RoleArn: !GetAtt CloudFormationIAMRole.Arn
                 StackName: !Sub ${RootStackName}-Staging
