Add CloudFormation policies to bootstrap template for audiogram

--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -233,6 +233,10 @@ Resources:
                   - "ecs:*"
                   - "iam:*"
                   - "autoscaling:*"
+                  - "cloudwatch:*"
+                  - "logs:*"
+                  - "elasticloadbalancing:*"
+                  - "route53:*"
                 Resource: "*"
   Pipeline:
     Type: "AWS::CodePipeline::Pipeline"
