Clean up syntax in VPC stack template

--- a/vpc.yml
+++ b/vpc.yml
@@ -179,7 +179,7 @@ Resources:
       VpcId: !Ref VPC
 Outputs:
   VPC:
-    Description:
+    Description: >
       Resource ID for the VPC
     Value: !Ref VPC
   Subnet1:
