Add some output values to ECS stack

--- a/ecs.yml
+++ b/ecs.yml
@@ -299,3 +299,16 @@ Resources:
       VPCZoneIdentifier:
         - !Ref VPCSubnet1
         - !Ref VPCSubnet2
+Outputs:
+  ECSCluster:
+    Description: >
+      The resource name of the ECS cluster (eg MyStack-MyCluster-NT5EUXTN176T)
+    Value: !Ref ECSCluster
+  ECSServiceAutoscaleIAMRoleArn:
+    Description: >
+      The ARN of the IAM role used for service auto scaling
+    Value: !GetAtt ECSServiceAutoscaleIAMRole.Arn
+  ECSServiceIAMRole:
+    Description: >
+      The resource name of the IAM role used by ECS services
+    Value: !Ref ECSServiceIAMRole
