Add audiogram stack template

--- a/audiogram/audiogram.yml
+++ b/audiogram/audiogram.yml
@@ -1,32 +1,21 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Description: Audiogram application running in Docker
 Parameters:
-  EnvironmentTypeAbbreviation:
-    Description: A short abbreviation indicating the environment type
-    Type: String
   VPC:
-    Description: The VPC for the cluster
+    Type: String
+  VPCSubnet1:
+    Type: String
+  VPCSubnet2:
     Type: String
   RootStackName:
-    Description: The name of the stack that created this stack
     Type: String
   ECSCluster:
-    Description: The ECS cluster this service will deploy into
     Type: String
   ECSServiceAutoscaleIAMRoleArn:
-    Description: >
-      ARN of policy to enable Task Autoscaling for Amazon EC2 Container Service
     Type: String
   ECSServiceIAMRole:
-    Description: >
-      The IAM role that allows your Amazon ECS container agent to make calls
-      to your load balancer
     Type: String
-  Subnet1:
-    Description: A VPC subnet available to the cluster
-    Type: String
-  Subnet2:
-    Description: A VPC subnet available to the cluster
+  EnvironmentTypeAbbreviation:
     Type: String
 Resources:
   AudiogramLogGroup:
