--- a/root.yml
+++ b/root.yml
@@ -10,6 +10,12 @@ AWSTemplateFormatVersion: "2010-09-09"
 Description: >
   Launches stacks for a number of applications and services that are maintained
   in separate templates.
+Mappings:
+  EnvironmentTypeAbbreviationMap:
+    Staging:
+      abbreviation: stag
+    Production:
+      abbreviation: prod
 Parameters:
   ASGKeyPairName:
     Description: >
@@ -44,4 +50,19 @@ Resources:
         VPCSubnet1AZ: !GetAtt VPCStack.Outputs.Subnet1AvailabilityZone
         VPCSubnet2AZ: !GetAtt VPCStack.Outputs.Subnet2AvailabilityZone
       TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/ecs.yml"]]
+      TimeoutInMinutes: "5"
+  AudiogramStack:
+    Type: "AWS::CloudFormation::Stack"
+    DependsOn: ECSClusterStack
+    Properties:
+      Parameters:
+        VPC: !GetAtt VPCStack.Outputs.VPC
+        VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
+        VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
+        RootStackName: !Ref AWS::StackName
+        ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
+        ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
+        ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
+        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref RootEnvironmentType, abbreviation]
+      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/audiogram/audiogram.yml"]]
       TimeoutInMinutes: "5"
