Fix Subnet ref in audiogram stack template

--- a/audiogram/audiogram.yml
+++ b/audiogram/audiogram.yml
@@ -59,8 +59,8 @@ Resources:
     Properties:
       Scheme: internet-facing
       Subnets:
-        - !Ref Subnet1
-        - !Ref Subnet2
+        - !Ref VPCSubnet1
+        - !Ref VPCSubnet2
       SecurityGroups:
         - !Ref AudiogramSecurityGroup
   AudiogramALBListener:
