Add image tag to audiogram task def

--- a/audiogram/audiogram.yml
+++ b/audiogram/audiogram.yml
@@ -1,3 +1,5 @@
+# TODO The task definition should reference a specific image tag, which is
+# passed in as a parameter
 AWSTemplateFormatVersion: "2010-09-09"
 Description: Audiogram application running in Docker
 Parameters:
@@ -81,7 +83,7 @@ Resources:
             - start
           Cpu: 512
           Essential: true
-          Image: 561178107736.dkr.ecr.us-east-1.amazonaws.com/audiogram.prx.tech
+          Image: 561178107736.dkr.ecr.us-east-1.amazonaws.com/audiogram.prx.tech:latest
           LogConfiguration:
             LogDriver: awslogs
             Options:
