Add application-autoscaling to bootstrap stack template

--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -237,6 +237,7 @@ Resources:
                   - "logs:*"
                   - "elasticloadbalancing:*"
                   - "route53:*"
+                  - "application-autoscaling:*"
                 Resource: "*"
   Pipeline:
     Type: "AWS::CodePipeline::Pipeline"
