Clean up bootstrap template outputs

--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -349,16 +349,16 @@ Resources:
         Type: CODEPIPELINE
       TimeoutInMinutes: 5
 Outputs:
-  StagingTemplateBucketURL:
+  StagingTemplateBucket:
     Description: >
-      The S3 URL for the bucket that templates have been synced to, to be used
+      The name of the bucket that templates have been synced to, to be used
       in a staging environment
     Value: !Ref StagingTemplateBucket
     Export:
       Name: !Sub ${AWS::StackName}-Staging-TemplateBucket
-  ProductionTemplateBucketURL:
+  ProductionTemplateBucket:
     Description: >
-      The S3 URL for the bucket that templates have been synced to, to be used
+      The name of the bucket that templates have been synced to, to be used
       in a production environment
     Value: !Ref ProductionTemplateBucket
     Export:
