Add Slack webhook param to root stack template

--- a/root.yml
+++ b/root.yml
@@ -31,6 +31,8 @@ Parameters:
     AllowedValues:
       - Staging
       - Production
+  SlackWebhookURL:
+    Type: String
 Resources:
   VPCStack:
     Type: "AWS::CloudFormation::Stack"
