--- a/root.yml
+++ b/root.yml
@@ -34,6 +34,13 @@ Parameters:
   SlackWebhookURL:
     Type: String
 Resources:
+  NotificationsStack:
+    Type: "AWS::CloudFormation::Stack"
+    Properties:
+      Parameters:
+        TemplateBucket: "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket"
+      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/notifications.yml"]]
+      TimeoutInMinutes: "2"
   VPCStack:
     Type: "AWS::CloudFormation::Stack"
     Properties:
