Temporarily disable most stacks in root stack template

--- a/root.yml
+++ b/root.yml
@@ -41,37 +41,37 @@ Resources:
         TemplateBucket: "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket"
       TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/notifications.yml"]]
       TimeoutInMinutes: "2"
-  VPCStack:
-    Type: "AWS::CloudFormation::Stack"
-    Properties:
-      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/vpc.yml"]]
-      TimeoutInMinutes: "5"
-  ECSClusterStack:
-    Type: "AWS::CloudFormation::Stack"
-    DependsOn: VPCStack
-    Properties:
-      Parameters:
-        KeyPairName: !Ref ASGKeyPairName
-        EnvironmentType: !Ref RootEnvironmentType
-        VPC: !GetAtt VPCStack.Outputs.VPC
-        VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
-        VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
-        VPCSubnet1AZ: !GetAtt VPCStack.Outputs.Subnet1AvailabilityZone
-        VPCSubnet2AZ: !GetAtt VPCStack.Outputs.Subnet2AvailabilityZone
-      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/ecs.yml"]]
-      TimeoutInMinutes: "5"
-  AudiogramStack:
-    Type: "AWS::CloudFormation::Stack"
-    DependsOn: ECSClusterStack
-    Properties:
-      Parameters:
-        VPC: !GetAtt VPCStack.Outputs.VPC
-        VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
-        VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
-        RootStackName: !Ref AWS::StackName
-        ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
-        ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
-        ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
-        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref RootEnvironmentType, abbreviation]
-      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/audiogram/audiogram.yml"]]
-      TimeoutInMinutes: "5"
+  # VPCStack:
+  #   Type: "AWS::CloudFormation::Stack"
+  #   Properties:
+  #     TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/vpc.yml"]]
+  #     TimeoutInMinutes: "5"
+  # ECSClusterStack:
+  #   Type: "AWS::CloudFormation::Stack"
+  #   DependsOn: VPCStack
+  #   Properties:
+  #     Parameters:
+  #       KeyPairName: !Ref ASGKeyPairName
+  #       EnvironmentType: !Ref RootEnvironmentType
+  #       VPC: !GetAtt VPCStack.Outputs.VPC
+  #       VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
+  #       VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
+  #       VPCSubnet1AZ: !GetAtt VPCStack.Outputs.Subnet1AvailabilityZone
+  #       VPCSubnet2AZ: !GetAtt VPCStack.Outputs.Subnet2AvailabilityZone
+  #     TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/ecs.yml"]]
+  #     TimeoutInMinutes: "5"
+  # AudiogramStack:
+  #   Type: "AWS::CloudFormation::Stack"
+  #   DependsOn: ECSClusterStack
+  #   Properties:
+  #     Parameters:
+  #       VPC: !GetAtt VPCStack.Outputs.VPC
+  #       VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
+  #       VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
+  #       RootStackName: !Ref AWS::StackName
+  #       ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
+  #       ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
+  #       ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
+  #       EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref RootEnvironmentType, abbreviation]
+  #     TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/audiogram/audiogram.yml"]]
+  #     TimeoutInMinutes: "5"
