--- a/notifications.yml
+++ b/notifications.yml
@@ -3,6 +3,8 @@ Description: >
   Creates foundational resources needed to handle infrastructure-related
   messaging and notifications
 Parameters:
+  SlackWebhookURL:
+    Type: String
   TemplateBucket:
     Type: String
 Resources:
@@ -65,7 +67,7 @@ Resources:
       Description: String
       Environment:
         Variables:
-          SLACK_WEBHOOK_URL: !Ref # TODO
+          SLACK_WEBHOOK_URL: !Ref SlackWebhookURL
       Handler: index.handler
       MemorySize: 128
       Role: !GetAtt LambdaBasicExecutionIAMRole.Arn
