Add Lambda policy to bootstrap CloudFormation role

--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -238,6 +238,7 @@ Resources:
                   - "elasticloadbalancing:*"
                   - "route53:*"
                   - "application-autoscaling:*"
+                  - "lambda:*"
                 Resource: "*"
   Pipeline:
     Type: "AWS::CodePipeline::Pipeline"
