Zip lambdas before syncing to S3

--- a/notifications.yml
+++ b/notifications.yml
@@ -63,7 +63,7 @@ Resources:
     Properties:
       Code:
         S3Bucket: !Ref TemplateBucket
-        S3Key: "lambdas/sns-ops-to-slack.js"
+        S3Key: "lambdas/sns-ops-to-slack.js.gz"
       Description: String
       Environment:
         Variables:
