Add policy to CodeBuild role to allow sync to delete S3 objects

--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -184,6 +184,7 @@ Resources:
                 Action:
                   - "s3:ListBucket"
                   - "s3:PutObject"
+                  - "s3:DeleteObject"
                 Resource:
                   - !Sub arn:aws:s3:::${StagingTemplateBucket}
                   - !Sub arn:aws:s3:::${StagingTemplateBucket}/*
