--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,7 +2,7 @@ version: 0.1
 phases:
   build:
     commands:
-      - echo
+      - echo Compressing Lambda functions
       - for file in lambdas/*; do gzip "$file"; done
       - echo Starting S3 sync to $TEMPLATE_BUCKET
       - aws s3 sync . s3://$TEMPLATE_BUCKET --acl private --region $AWS_REGION --delete --exclude ".git/*" --exclude "buildspec.yml"
