Fix zipping of Lambda functions

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ phases:
   build:
     commands:
       - echo Compressing Lambda functions
-      - for file in lambdas/*; do gzip "$file"; done
+      - for file in *; do zip -X "$file".zip "$file"; done
       - echo Starting S3 sync to $TEMPLATE_BUCKET
       - aws s3 sync . s3://$TEMPLATE_BUCKET --acl private --region $AWS_REGION --delete --exclude ".git/*" --exclude "buildspec.yml"
 artifacts:
