--- a/notifications.yml
+++ b/notifications.yml
@@ -63,12 +63,12 @@ Resources:
     Properties:
       Code:
         S3Bucket: !Ref TemplateBucket
-        S3Key: "lambdas/sns-ops-to-slack.js.gz"
+        S3Key: "lambdas/sns-ops-to-slack.js.zip"
       Description: String
       Environment:
         Variables:
           SLACK_WEBHOOK_URL: !Ref SlackWebhookURL
-      Handler: index.handler
+      Handler: sns-ops-to-slack.handler
       MemorySize: 128
       Role: !GetAtt LambdaBasicExecutionIAMRole.Arn
       Runtime: nodejs4.3
